# arendur

./: .travis.yml  Cargo.toml  README.md
examples/: arencli.rs  pt.rs  sponza.rs
examples/bpt/: main.rs
examples/cornellbox/: CornellBox-Glossy.mtl  cb.json
examples/whitted/: main.rs
src/: lib.rs  prelude.rs
src/bxdf/: fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  prelude.rs  scaled.rs  specular.rs
src/component/: bvh.rs  mod.rs  naive.rs  prelude.rs  shape.rs  transformed.rs
src/filming/: film.rs  mod.rs  ortho.rs  perspective.rs  prelude.rs  projective.rs  tests.rs
src/geometry/: bbox.rs  cgmath_prelude.rs  float.rs  foundamental.rs  interaction.rs  mod.rs  prelude.rs  ray.rs  tests.rs  transform.rs
src/lighting/: arealights.rs  distantlight.rs  mod.rs  pointlights.rs  prelude.rs
src/material/: bsdf.rs  glass.rs  matte.rs  mod.rs  plastic.rs  prelude.rs  translucent.rs
src/primitive/: bvh.rs  mod.rs  naive.rs  shape.rs  transformed.rs
src/renderer/: mod.rs  pt.rs  scene.rs  whitted.rs
src/renderer/bpt/: mod.rs  node.rs
src/sample/: distribution.rs  filters.rs  mod.rs  naive.rs  prelude.rs  sink.rs  strata.rs
src/shape/: mod.rs  prelude.rs  sphere.rs  tests.rs  triangle.rs
src/spectrum/: macros.rs  mod.rs
src/texturing/: mappings.rs  mod.rs  prelude.rs
src/texturing/textures/: image.rs  mod.rs
