[package]
name = "arendur"
version = "0.0.5"
authors = ["Luxko <luxko@qq.com>"]

license = "MIT/Apache-2.0"
description = "Just another physically based renderer."

documentation = "https://docs.rs/arendur"
repository = "https://github.com/DaseinPhaos/arendur"
homepage = "https://github.com/DaseinPhaos/arendur"
readme = "README.md"

keywords = ["cg", "rendering"]
categories = ["rendering"]


[dependencies]
log = "0.3"
num-traits = "0.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
cgmath = { version="0.14", features=["eders"] }
bitflags = "0.7"
image = "0.12"
lazy_static = "0.2"
copy_arena = "0.1"
aren_alloc = "0.2"
rayon = "0.7"
tobj = "0.1"
flame = {version="0.1", optional=true}

[dev-dependencies]
env_logger = "0.4"
clap = "2.24"
serde_json = "1.0"
flame = "0.1"

[features]
default = []

[[example]]
name = "arencli"
path = "examples/arencli.rs"

[[example]]
name = "pt"
path = "examples/pt.rs"
